--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           }
 
           
-          window.location.href = "http://127.0.0.1:5500/INTROOOOOO.html";
+          window.location.href = "INTROOOOOO.html";
         }
 
         form.classList.add('was-validated');
