--- a/INTROOOOOO.html
+++ b/INTROOOOOO.html
@@ -17,7 +17,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5500/home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
         
       </ul>
     </div>
