--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
 
   <h1 class="title">Welcome to My Homepage</h1>
   <div class="btn-container">
-    <button class="button" onclick="location.href='http://127.0.0.1:5500/myself.html'">Myself</button>
-    <button class="button" onclick="location.href='http://127.0.0.1:5500/cert.html'">Certificates</button>
-    <button class="button" onclick="location.href='http://127.0.0.1:5500/contact.html'">My Contact</button>
+    <button class="button" onclick="location.href='myself.html'">Myself</button>
+    <button class="button" onclick="location.href='cert.html'">Certificates</button>
+    <button class="button" onclick="location.href='contact.html'">My Contact</button>
   </div>
 
 </body>
